# Intelligent-SQL-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: app-entrypoint.sh  model_spike.py  ollama-init.sh
src/: main.py
src/agent/: cache.py  error_handlers.py  graph.py  prompts.py  state.py  tools.py  tracing.py
src/agent/nodes/: agent.py  execute.py  observe.py  reflect.py  validate.py
src/agent/prompts/: schema_desc.py  sql_few_shot.py  system.py
src/agent/tools/: sql_tools.py
src/api/: app.py
src/api/routes/: approve.py  health.py  history.py  query.py  schema.py  stream.py
src/config/: settings.py
src/db/: connection.py  schema.sql  seed.sql
